# simpleneuralnetwork

./: CMakeCache.txt  CMakeLists.txt  CPackConfig.cmake  CPackSourceConfig.cmake  CTestTestfile.cmake  DartConfiguration.tcl  Makefile  README.md  cmake_install.cmake  main.cpp  neuralnetwork
